# benday

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
benday/: Cargo.toml
benday/src/: animation.rs  main.rs
benday/src/blocs/: as_ast_node.rs  bloc.rs  containers.rs  mod.rs  old_bloc.rs  variable_assignment.rs  while.rs  widgets.rs
models/examples/: ast.rs  change.rs  error.rs
models/src/: as_ast_node  ast.rs  change.rs  error.rs  lib.rs  return_value.rs  runner.rs
pg_sdl/: Cargo.toml
pg_sdl/docs/: CONTRIBUTING.md  LICENSE.md  TODO.md
pg_sdl/src/: camera.rs  canvas.rs  color.rs  custom_rect.rs  draw_circle.rs  lib.rs  primitives.rs  utils.rs  vector2.rs
pg_sdl/src/app/: mod.rs
pg_sdl/src/camera/: mod.rs
pg_sdl/src/input/: key_state.rs  mod.rs  mouse.rs
pg_sdl/src/style/: mod.rs
pg_sdl/src/text/: mod.rs  text.rs  text_style.rs
pg_sdl/src/widgets/: blank_box.rs  button.rs  draggable.rs  manager.rs  mod.rs  select.rs  slider.rs  switch.rs  text_box.rs  text_box_q.rs  text_input.rs  widgets_manager.rs
runner/: Cargo.toml
runner/examples/: python.rs  save.rs
runner/src/: find_variable.rs  fuzzy_finder.rs  lib.rs  math.rs  variables_expansion.rs
runner/src/exectute/: action.rs  console.rs  execute.rs  mod.rs  tests.rs
runner/src/transpile/python/: mod.rs
runner/src/transpile/rust/: mod.rs
