[package]
name = "pg_sdl"
license = "MIT"
edition = "2021"
version = "0.1.1"
description = "A SDL2-superset library for easy game or application development."
authors = [
    "Arnaud Jungo <arnolo.jo@gmail.com>",
    "Quentin Jungo <quentin.jungo@gmail.com>",
]
categories = ["rendering", "api-bindings", "game-engines", "multimedia", "gui"]
keywords = ["SDL", "gui", "graphics", "superset", "engine"]
readme = "README.md"
repository = "https://github.com/DynamicUI/pg_sdl"
documentation = "https://docs.rs/pg_sdl/"

[lib]
path = "./src/lib.rs"

[dependencies]
sdl2 = { workspace = true }
nalgebra = { workspace = true }
as-any = { workspace = true }
rand = { workspace = true }
itertools = "0.10.5"
ndarray = "0.13.0"
lazy_static = "1.4.0"
num-traits = "0.2.16"
